test/fail/basic_syntax/invalid_keyword_use.lly
#[
SyntaxError: var has not been declared.
Where: File "invalid_keyword_use.lly" at line 6
]#

var v = var
